--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
           <div class="premium">
             <h4>PREMIUM</h4>
             <h4>QUALITY</h4>
-            <p>Lorem ipsum dolor sit amet</p>
+            <p class="lorem"> Lorem ipsum dolor sit amet</p>
             <span>Esse cillum dolore excepteur labore nisi laborum laboris  </span>
           </div>
           <div class="hd-image">
@@ -75,7 +75,7 @@
     <div class="products-menu ">
         <div>HEADPHONES</div>
         <div>EARPHONES</div>
-        <div class="nav-link ">BLUETOOPH</div>
+        <div class="nav-link ">BLUETOOTH</div>
         <div>WATERPHOOF</div>
         <div >SPORTS</div>
         <div>METALLIC</div>
@@ -97,13 +97,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/22.gif" class="d-block w-100" alt="...">
+          <img src="/img/22.gif" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-          <img src="/img/2.jpeg" class="d-block w-100" alt="...">
+          <img src="/img/22.gif"class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-          <img src="/img/3.jpeg" class="d-block w-100" alt="...">
+          <img src="/img/3.jpeg" class="d-block w-100" alt="">
         </div>
       </div>
         
@@ -120,7 +120,6 @@
     <div class="button-view"><button>VIEW MORE</button></div>
 
  <!---------------------------------- About us-------------------------------------->
-    <div id="about"></div> 
     <div class="section"> <p>ABOUT US</p> </div>
     <div class="about-us">
       <div>
@@ -170,13 +169,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/fn.gif" class="d-block w-100" alt="...">
+          <img src="/img/fn.gif" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src=""class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="" class="d-block w-100" alt="">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -191,7 +190,6 @@
     <div class="button-view"><button>VIEW MORE</button></div>
 
 <!---------------------------------- contact -------------------------------------->
-    <div id="contact"></div>
     <div class="contact">
       <div class="big-items">
         <h3>CONTACT</h3>
