end of de project

--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
               <i class="fab fa-youtube"></i>
               <i class="fab fa-linkedin"></i>
           </div>
+         
           <input type="checkbox" name="" id="chk">
           <label for="chk" class="show-btn">
                   <i class="fas fa-bars"></i>
@@ -120,6 +121,7 @@
     <div class="button-view"><button>VIEW MORE</button></div>
 
  <!---------------------------------- About us-------------------------------------->
+ <div id="about"></div>
     <div class="section"> <p>ABOUT US</p> </div>
     <div class="about-us">
       <div>
@@ -190,6 +192,7 @@
     <div class="button-view"><button>VIEW MORE</button></div>
 
 <!---------------------------------- contact -------------------------------------->
+<div id="contact"></div>
     <div class="contact">
       <div class="big-items">
         <h3>CONTACT</h3>
