--- a/html/bluetooth.html
+++ b/html/bluetooth.html
@@ -107,84 +107,84 @@
         <div class="container-fluid mother">
             <div class="container d-flex fle-row flex-wrap mt-3">
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png"class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column  m-3" >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/11.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
