--- a/html/earphones.html
+++ b/html/earphones.html
@@ -13,6 +13,7 @@
  <script src="https://kit.fontawesome.com/58d3aa067d.js"></script>
  <!-- css link -->
  <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="/css/bluetooth.css">
  <link rel="stylesheet" href="/media/bootstrap-4.3.1-dist/css/bootstrap-grid.css">
  <link href="https://fonts.googleapis.com/css?family=Anton|Faster+One|Monoton|PT+Sans+Narrow|Rajdhani|Slabo+27px&display=swap" rel="stylesheet">
  
@@ -105,89 +106,62 @@
         <div class="container-fluid mother">
             <div class="container d-flex fle-row flex-wrap mt-3">
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/44.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/44.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/44.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
+                    <img src="/img/44.png" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor </p>
                     </div>
                     <button type="button" class="btn btn-success btn-sm">Buy</button>
                 </div>
                 <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
+                        <img src="/img/44.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor </p>
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm">Buy</button>
                     </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
+                    <div class="container-item card d-flex flex-column m-3 " >
+                        <img src="/img/44.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor </p>
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm">Buy</button>
                     </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
+                    <div class="container-item card d-flex flex-column m-3 " >
+                        <img src="/img/44.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor </p>
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm">Buy</button>
                     </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
+                    <div class="container-item card d-flex flex-column m-3 " >
+                        <img src="/img/44.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor </p>
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm">Buy</button>
                     </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column m-3 " >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
-                <div class="container-item card d-flex flex-column  m-3" >
-                    <img src="https://picsum.photos/id/684/600/400?grayscale" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor </p>
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm">Buy</button>
-                </div>
+                
             </div>
         </div>
 
