--- a/html/index.html
+++ b/html/index.html
@@ -95,7 +95,7 @@
       <a href="waterproof.html">WATERPHOOF</a>
       <a href="sport.html">SPORTS</a>
       <a href="metallic.html">METALLIC</a>
-      <a href="woodeen-bamboo.html">WOODEN/BAMBOO</a>
+      <a href="woodeen-bamboo.html">WOODEN</a>
       <a href="earmuff.html">EARMUFF</a>
        
     </div>
@@ -122,7 +122,7 @@
           <img src="/img/33.png" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-          <img src="/img/photo-1485170536212-67180b105ff6-removebg-preview.png"class="d-block w-100" alt="">
+          <img src="/img/11.png"class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
           <img src="/img/44.png" class="d-block w-100" alt="">
@@ -208,7 +208,7 @@
             <img src="/img/444-removebg-preview.png"class="d-block w-100" alt="">
           </div>
           <div class="carousel-item">
-            <img src="/img/photo-1503300961747-204cbbdaeb51-removebg-preview.png" class="d-block w-100" alt="">
+            <img src="/img/33.png" class="d-block w-100" alt="">
           </div>
           <div class="carousel-item">
             <img src="/img/33-removebg-preview.png" class="d-block w-100" alt="">
