--- a/html/waterproof.html
+++ b/html/waterproof.html
@@ -13,6 +13,7 @@
  <script src="https://kit.fontawesome.com/58d3aa067d.js"></script>
  <!-- css link -->
  <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="/css/bluetooth.css">
  <link rel="stylesheet" href="/media/bootstrap-4.3.1-dist/css/bootstrap-grid.css">
  <link href="https://fonts.googleapis.com/css?family=Anton|Faster+One|Monoton|PT+Sans+Narrow|Rajdhani|Slabo+27px&display=swap" rel="stylesheet">
  
